--- a/packages/trino-backend/trino-backend-lib/build.gradle
+++ b/packages/trino-backend/trino-backend-lib/build.gradle
@@ -97,7 +97,10 @@ dependencies {
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-stream', version: '3.2.4'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-kafka', version: '3.2.4'
 	implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.8.6'
-    implementation group: 'org.glassfish.web', name: 'javax.el', version: '2.2.4'
+
+	implementation group: 'javax.el', name: 'javax.el-api', version: '2.2.4'
+	implementation group: 'org.glassfish.web', name: 'javax.el', version: '2.2.4'
+
 	implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.4.2'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.0'
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.20'
