--- a/packages/trino-backend/trino-backend-lib/src/main/resources/application.yml
+++ b/packages/trino-backend/trino-backend-lib/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   mvc.pathmatch.matching-strategy: ant_path_matcher
   application:
     name: trinio-registry-service
-    version: 1.2.0
+    version: 1.2.1
 
   flyway:
     enabled: ${FLYWAY_ENABLED:false}
@@ -67,11 +67,16 @@ trino:
   userauth: ${TRINO_USERAUTH:XXXXX}
   userid: ${TRINO_USERID:XXXXX}
   uri: ${TRINO_BASEURI:XXXXX}
+  host: ${TRINO_HOST:XXXXX}
+  port: ${TRINO_PORT:XXXX}
   user: ${TRINO_USER:XXXXX}
   password: ${TRINO_PASSWORD:XXXXX}
   ssl: ${TRINO_SSL:true}
   sslverification: ${TRINO_SSLVERIFICATION:NONE}
-  catalog: ${TRINO_CATALOG:XXXXX}
+  catalog:
+    default: ${TRINO_CATALOG:XXXX}
+    iceberg: ${TRINO_ICEBERG_CATALOG:XXXX}
+    delta: ${TRINO_ICEBERG_CATALOG:XXXX}
   hadoop.remoteUser: ${TRINO_UNIX_HADOOP_REMOTEUSER:spring}
    
 swagger.headers.authorization.token: ${SWAGGER_HEADER_AUTH:XXXXXX}
