--- a/deployment/kubernetes/helm/charts/code-server/templates/secrets.yaml
+++ b/deployment/kubernetes/helm/charts/code-server/templates/secrets.yaml
@@ -17,3 +17,11 @@ data:
   {{ else }}
   password: "{{ randAlphaNum 24 | b64enc }}"
   {{ end }}
+  GITHUB_TOKEN: "{{ .Values.githubToken | b64enc }}"
+  GITHUBREPO_URL: "{{ .Values.githuburl | b64enc }}"
+  MINIO_ENDPOINT: "{{ .Values.minioEndpoint | b64enc }}"
+  MINIO_KEY: "{{ .Values.minioKey | b64enc }}"
+  MINIO_SECRET: "{{ .Values.minioSecret | b64enc }}"
+  SHORTID: "{{ .Values.shortid | b64enc }}"
+  isCollaborator: "{{ .Values.isCollaborator | b64enc }}"
+  pathCheckout: "{{ .Values.pathCheckout | b64enc }}"
