--- a/deployment/kubernetes/kubeflow/kfp-multi-user/manifests/common/knative/knative-eventing/base/upstream/mt-channel-broker.yaml
+++ b/deployment/kubernetes/kubeflow/kfp-multi-user/manifests/common/knative/knative-eventing/base/upstream/mt-channel-broker.yaml
@@ -3,7 +3,8 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-channel-broker-controller
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 rules:
   - apiGroups:
       - ""
@@ -29,7 +30,8 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-broker-filter
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 rules:
   - apiGroups:
       - eventing.knative.dev
@@ -55,14 +57,16 @@ metadata:
   name: mt-broker-filter
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: knative-eventing-mt-broker-ingress
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 rules:
   - apiGroups:
       - eventing.knative.dev
@@ -87,14 +91,16 @@ metadata:
   name: mt-broker-ingress
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: eventing-mt-channel-broker-controller
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
     name: eventing-controller
@@ -109,7 +115,8 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-mt-broker-filter
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
     name: mt-broker-filter
@@ -124,7 +131,8 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-mt-broker-ingress
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
     name: mt-broker-ingress
@@ -140,7 +148,9 @@ metadata:
   name: mt-broker-filter
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/component: broker-filter
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 spec:
   selector:
     matchLabels:
@@ -149,14 +159,16 @@ spec:
     metadata:
       labels:
         eventing.knative.dev/brokerRole: filter
-        eventing.knative.dev/release: "v0.22.1"
+        app.kubernetes.io/component: broker-filter
+        app.kubernetes.io/version: "1.10.1"
+        app.kubernetes.io/name: knative-eventing
     spec:
       serviceAccountName: mt-broker-filter
       enableServiceLinks: false
       containers:
         - name: filter
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-releases/knative.dev/eventing/cmd/broker/filter@sha256:0e25aa1613a3a1779b3f7b7f863e651e5f37520a7f6808ccad2164cc2b6a9b12
+          image: gcr.io/knative-releases/knative.dev/eventing/cmd/broker/filter@sha256:29bd9f43359153c0ea39cf382d5f25ca43f55abbbce3d802ca37cc4d5c4a6942
           readinessProbe:
             failureThreshold: 3
             httpGet:
@@ -215,13 +227,22 @@ spec:
               value: "8080"
           securityContext:
             allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            capabilities:
+              drop:
+                - ALL
+            seccompProfile:
+              type: RuntimeDefault
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
     eventing.knative.dev/brokerRole: filter
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/component: broker-filter
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
   name: broker-filter
   namespace: knative-eventing
 spec:
@@ -243,7 +264,9 @@ metadata:
   name: mt-broker-ingress
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/component: broker-ingress
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 spec:
   selector:
     matchLabels:
@@ -252,14 +275,16 @@ spec:
     metadata:
       labels:
         eventing.knative.dev/brokerRole: ingress
-        eventing.knative.dev/release: "v0.22.1"
+        app.kubernetes.io/component: broker-ingress
+        app.kubernetes.io/version: "1.10.1"
+        app.kubernetes.io/name: knative-eventing
     spec:
       serviceAccountName: mt-broker-ingress
       enableServiceLinks: false
       containers:
         - name: ingress
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-releases/knative.dev/eventing/cmd/broker/ingress@sha256:cf579f88aa2a37c240e25bb886c1ef5404e326e12c7caf571e49308612243eee
+          image: gcr.io/knative-releases/knative.dev/eventing/cmd/broker/ingress@sha256:7f3b05f6e0abae19e9438fac44dd9938ddd2293014ef0fb8d388450c9ff63000
           readinessProbe:
             failureThreshold: 3
             httpGet:
@@ -318,13 +343,22 @@ spec:
               value: "8080"
           securityContext:
             allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            capabilities:
+              drop:
+                - ALL
+            seccompProfile:
+              type: RuntimeDefault
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
     eventing.knative.dev/brokerRole: ingress
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/component: broker-ingress
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
   name: broker-ingress
   namespace: knative-eventing
 spec:
@@ -346,7 +380,9 @@ metadata:
   name: mt-broker-controller
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/component: mt-broker-controller
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 spec:
   selector:
     matchLabels:
@@ -355,7 +391,9 @@ spec:
     metadata:
       labels:
         app: mt-broker-controller
-        eventing.knative.dev/release: "v0.22.1"
+        app.kubernetes.io/component: broker-controller
+        app.kubernetes.io/version: "1.10.1"
+        app.kubernetes.io/name: knative-eventing
     spec:
       affinity:
         podAntiAffinity:
@@ -371,7 +409,7 @@ spec:
       containers:
         - name: mt-broker-controller
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-releases/knative.dev/eventing/cmd/mtchannel_broker@sha256:a2678934d280ea19b0804cc7757d559a0312e2acea221b17a99bd830cd9eeaac
+          image: gcr.io/knative-releases/knative.dev/eventing/cmd/mtchannel_broker@sha256:4040ffc2d34e950b7969b4ba90cec29e65e506126ddb195faf3a56cb2fa653e8
           resources:
             requests:
               cpu: 100m
@@ -387,27 +425,34 @@ spec:
               value: config-observability
             - name: METRICS_DOMAIN
               value: knative.dev/eventing
-            - name: BROKER_INJECTION_DEFAULT
-              value: "false"
             - name: POD_NAME
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
           securityContext:
             allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            capabilities:
+              drop:
+                - ALL
+            seccompProfile:
+              type: RuntimeDefault
           ports:
             - name: metrics
               containerPort: 9090
             - name: profiling
               containerPort: 8008
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: broker-ingress-hpa
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/component: broker-ingress
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -423,13 +468,15 @@ spec:
           type: Utilization
           averageUtilization: 70
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: broker-filter-hpa
   namespace: knative-eventing
   labels:
-    eventing.knative.dev/release: "v0.22.1"
+    app.kubernetes.io/component: broker-filter
+    app.kubernetes.io/version: "1.10.1"
+    app.kubernetes.io/name: knative-eventing
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
