--- a/deployment/kubernetes/kubeflow/kfp-multi-user/manifests/common/oidc-authservice/base/params.env
+++ b/deployment/kubernetes/kubeflow/kfp-multi-user/manifests/common/oidc-authservice/base/params.env
@@ -1,8 +1,11 @@
-OIDC_PROVIDER=https://SSO_INT
-OIDC_SCOPES=email
-REDIRECT_URL=KFP_DEV/login/oidc
+OIDC_PROVIDER=http://dex.auth.svc.cluster.local:5556/dex
+OIDC_AUTH_URL=/dex/auth
+OIDC_SCOPES=profile email groups
+AUTHSERVICE_URL_PREFIX=/authservice/
+SKIP_AUTH_URLS=/dex
+AFTER_LOGOUT_URL=/
 USERID_HEADER=kubeflow-userid
 USERID_PREFIX=
-USERID_CLAIM=sub
+USERID_CLAIM=email
 PORT="8080"
 STORE_PATH=/var/lib/authservice/data.db
