--- a/deployment/kubernetes/kubeflow/kfp-multi-user/manifests/common/oidc-authservice/base/secret_params.env
+++ b/deployment/kubernetes/kubeflow/kfp-multi-user/manifests/common/oidc-authservice/base/secret_params.env
@@ -1,5 +1,2 @@
-
-CLIENT_ID=********************************************
-
-
-CLIENT_SECRET=********************************************
+CLIENT_ID=kubeflow-oidc-authservice
+CLIENT_SECRET=pUBnBOY80SnXgjibTYM9ZWNzY2xreNGQok
