--- a/deployment/kubernetes/kubeflow/kfp-multi-user/manifests/main/kustomization.yaml
+++ b/deployment/kubernetes/kubeflow/kfp-multi-user/manifests/main/kustomization.yaml
@@ -3,54 +3,54 @@ kind: Kustomization
 
 resources:
 # Cert-Manager
-#- ../common/cert-manager/cert-manager/base
+  # - ../common/cert-manager/cert-manager/base
   - ../common/cert-manager/kubeflow-issuer/base
-# Istio
-  - ../common/istio-1-9/istio-crds/base
-  - ../common/istio-1-9/istio-namespace/base
-  - ../common/istio-1-9/istio-install/base
-# OIDC Authservice
+# # Istio
+  - ../common/istio-1-17/istio-crds/base
+  - ../common/istio-1-17/istio-namespace/base
+  - ../common/istio-1-17/istio-install/base
+# # OIDC Authservice
   - ../common/oidc-authservice/base
-# # Dex
-# - ../common/dex/overlays/istio
-# KNative
+# # # Dex
+# # - ../common/dex/overlays/istio
+# # KNative
   - ../common/knative/knative-serving/overlays/gateways
   - ../common/knative/knative-eventing/base
-  - ../common/istio-1-9/cluster-local-gateway/base
-# Kubeflow namespace
+  - ../common/istio-1-17/cluster-local-gateway/base
+# # Kubeflow namespace
   - ../common/kubeflow-namespace/base
-# Kubeflow Roles
+# # Kubeflow Roles
   - ../common/kubeflow-roles/base
-# Kubeflow Istio Resources
-  - ../common/istio-1-9/kubeflow-istio-resources/base
+# # Kubeflow Istio Resources
+  - ../common/istio-1-17/kubeflow-istio-resources/base
 
 
-# Kubeflow Pipelines
-  - ../apps/pipeline/upstream/env/platform-agnostic-multi-user-emissary
-# # KFServing
-  - ../apps/kfserving/upstream/overlays/kubeflow
-# # Katib
-# - ../apps/katib/upstream/installs/katib-with-kubeflow
-# Central Dashboard
-# - ../apps/centraldashboard/upstream
-  - ../apps/centraldashboard/upstream/overlays/istio
-# Admission Webhook
-  - ../apps/admission-webhook/upstream/overlays/cert-manager
-# # Notebook Controller
-# - ../apps/jupyter/jupyter-web-app/upstream/overlays/istio
-# # Jupyter Web App
-# - ../apps/jupyter/notebook-controller/upstream/overlays/kubeflow
-# Profiles + KFAM
-  - ../apps/profiles/upstream/overlays/kubeflow
-# # Volumes Web App
-# - ../apps/volumes-web-app/upstream/overlays/istio
-# # Tensorboards Controller
-# -  ../apps/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
-# # Tensorboard Web App
-# -  ../apps/tensorboard/tensorboards-web-app/upstream/overlays/istio
-# # Training Operator
-# - ../apps/training-operator/upstream/overlays/kubeflow
-# # MPI Operator
-# - ../apps/mpi-job/upstream/overlays/kubeflow
-# User namespace
-  # - ../common/user-namespace/base
+# # Kubeflow Pipelines
+#   - ../apps/pipeline/upstream/env/platform-agnostic-multi-user-emissary
+# # # KFServing
+#   - ../apps/kfserving/upstream/overlays/kubeflow
+# # # Katib
+# # - ../apps/katib/upstream/installs/katib-with-kubeflow
+# # Central Dashboard
+# # - ../apps/centraldashboard/upstream
+#   - ../apps/centraldashboard/upstream/overlays/istio
+# # Admission Webhook
+#   - ../apps/admission-webhook/upstream/overlays/cert-manager
+# # # Notebook Controller
+# # - ../apps/jupyter/jupyter-web-app/upstream/overlays/istio
+# # # Jupyter Web App
+# # - ../apps/jupyter/notebook-controller/upstream/overlays/kubeflow
+# # Profiles + KFAM
+#   - ../apps/profiles/upstream/overlays/kubeflow
+# # # Volumes Web App
+# # - ../apps/volumes-web-app/upstream/overlays/istio
+# # # Tensorboards Controller
+# # -  ../apps/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
+# # # Tensorboard Web App
+# # -  ../apps/tensorboard/tensorboards-web-app/upstream/overlays/istio
+# # # Training Operator
+# # - ../apps/training-operator/upstream/overlays/kubeflow
+# # # MPI Operator
+# # - ../apps/mpi-job/upstream/overlays/kubeflow
+# # User namespace
+#   # - ../common/user-namespace/base
