INFRA: block traffic

--- a/deployment/kubernetes/helm/charts/authenticator-service/templates/networkpolicy.yaml
+++ b/deployment/kubernetes/helm/charts/authenticator-service/templates/networkpolicy.yaml
@@ -20,6 +20,6 @@ spec:
             app.kubernetes.io/name: code-server-backend
         namespaceSelector:
           matchLabels:
-            name: code-server           
+            kubernetes.io/metadata.name: code-server          
   policyTypes:
     - Ingress
