--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -315,6 +315,43 @@ paths:
         500:
           description: "Internal error"
 
+  /workspaces/{id}/datagoverance:        
+    patch:
+      tags:
+        - "code-server"
+      summary: "Add governance to existing workspace Project for a given Id."
+      description: "Add governance to existing workspace Project "
+      operationId: "updateGovernance"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Workspace ID to be fetched"
+          required: true
+          type: "string"
+        - name: "dataGovernanceInfo"
+          in: "body"
+          description: "dataGovernanceInfo to add codespace"
+          required: true
+          schema:
+           $ref: "#/definitions/DataGovernanceRequestInfo"
+      responses:
+        201:
+          description: "Returns message of success or failure"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        204:
+          description: "Fetch complete, no content found."
+        400:
+          description: "Bad request."
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"
+
   /workspaces/{id}/collaborator/{userid}:
     delete:
       tags:
@@ -802,6 +839,8 @@ definitions:
         format: date
       securityConfig:
         $ref: "#/definitions/CodespaceSecurityConfigVO"
+      dataGovernance:
+         $ref: "#/definitions/CodeServerGovernanceVO"
       required:
         -projectName
         -recipeDetails
@@ -1073,3 +1112,56 @@ definitions:
       mobileNumber:
         type: string
         description: "Mobile number of the user" 
+  
+  DataGovernanceRequestInfo:
+    type: object
+    properties:
+      data:
+        $ref: "#/definitions/CodeServerGovernanceVO"
+
+  CodeServerGovernanceVO :
+    type: object
+    properties:
+      description:
+        type: string
+        description: "description type for codespace"
+      classificationType:
+        type: string
+        description: "Classification type for codespace"
+      division:
+        type: string
+        description: "division for the codespace"
+      subDivision:
+        type: string
+        description: "sub division for the codespace"
+      department:
+        type: string
+        description: "department for the codespace"
+      archerId:
+        type: string
+        description: "archerId for the codespace"
+      procedureID:
+        type: string
+        description: "producerId for the codespace"
+      permission:
+        type: string
+        description: "Read write admin permissions"
+      tags:
+        type: array
+        items:
+          type: string
+      typeOfProject:
+        type: string
+        description: "typeOfProject for the codespace"
+      piiData:
+        type: boolean
+        description: "If codespace contains personally identifiable information"
+      required:
+        -description
+        - division
+        -subDivision
+        - department
+        - classificationType
+        -typeOfProject
+        -producerId
+        -piiData
