Introduced new AI Risk assessment type fields in data compliance

--- a/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
@@ -1189,6 +1189,9 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/TeamMemberVO"
+      AIRiskAssessmentType:
+        type: string
+        enum: ["NO_RISK", "BASIC_RISK", "HIGH_RISK"]    
   
   LinkVO:
     type: object
