--- a/deployment/kubernetes/helm/charts/vault/templates/injector-clusterrole.yaml
+++ b/deployment/kubernetes/helm/charts/vault/templates/injector-clusterrole.yaml
@@ -1,10 +1,14 @@
+{{/*
+Copyright (c) HashiCorp, Inc.
+SPDX-License-Identifier: MPL-2.0
+*/}}
+
 {{- template "vault.injectorEnabled" . -}}
 {{- if .injectorEnabled -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: {{ template "vault.fullname" . }}-agent-injector-clusterrole
-  namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/name: {{ include "vault.name" . }}-agent-injector
     app.kubernetes.io/instance: {{ .Release.Name }}
