--- a/deployment/kubernetes/helm/charts/vault/templates/injector-clusterrolebinding.yaml
+++ b/deployment/kubernetes/helm/charts/vault/templates/injector-clusterrolebinding.yaml
@@ -1,10 +1,14 @@
+{{/*
+Copyright (c) HashiCorp, Inc.
+SPDX-License-Identifier: MPL-2.0
+*/}}
+
 {{- template "vault.injectorEnabled" . -}}
 {{- if .injectorEnabled -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: {{ template "vault.fullname" . }}-agent-injector-binding
-  namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/name: {{ include "vault.name" . }}-agent-injector
     app.kubernetes.io/instance: {{ .Release.Name }}
@@ -16,5 +20,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ template "vault.fullname" . }}-agent-injector
-  namespace: {{ .Values.namespace }}
+  namespace: {{ include "vault.namespace" . }}
 {{ end }}
