--- a/deployment/kubernetes/helm/charts/vault/templates/injector-network-policy.yaml
+++ b/deployment/kubernetes/helm/charts/vault/templates/injector-network-policy.yaml
@@ -1,10 +1,15 @@
+{{/*
+Copyright (c) HashiCorp, Inc.
+SPDX-License-Identifier: MPL-2.0
+*/}}
+
 {{- template "vault.injectorEnabled" . -}}
 {{- if .injectorEnabled -}}
+{{- if eq (.Values.global.openshift | toString) "true" }}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: {{ template "vault.fullname" . }}-agent-injector
-  namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/name: {{ template "vault.name" . }}-agent-injector
     app.kubernetes.io/instance: {{ .Release.Name }}
@@ -20,4 +25,5 @@ spec:
       ports:
       - port: 8080
         protocol: TCP
+{{ end }}
 {{ end }}
