--- a/deployment/kubernetes/helm/charts/vault/values.openshift.yaml
+++ b/deployment/kubernetes/helm/charts/vault/values.openshift.yaml
@@ -1,3 +1,6 @@
+# Copyright (c) HashiCorp, Inc.
+# SPDX-License-Identifier: MPL-2.0
+
 # These overrides are appropriate defaults for deploying this chart on OpenShift
 
 global:
@@ -6,13 +9,16 @@ global:
 injector:
   image:
     repository: "registry.connect.redhat.com/hashicorp/vault-k8s"
-    tag: "0.14.2-ubi"
+    tag: "1.3.1-ubi"
 
   agentImage:
     repository: "registry.connect.redhat.com/hashicorp/vault"
-    tag: "1.9.3-ubi"
+    tag: "1.15.2-ubi"
 
 server:
   image:
     repository: "registry.connect.redhat.com/hashicorp/vault"
-    tag: "1.9.3-ubi"
+    tag: "1.15.2-ubi"
+
+  readinessProbe:
+    path: "/v1/sys/health?uninitcode=204"
