changes for publishedSecurityConfig--alice

--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -801,6 +801,8 @@ definitions:
         format: date
       securityConfig:
         $ref: "#/definitions/CodespaceSecurityConfigVO"
+      publishedSecuirtyConfig:
+        $ref: "#/definitions/CodespaceSecurityConfigVO"
       required:
         -projectName
         -recipeDetails
